--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "diana-skype-translator",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "botbuilder": "^3.15.0",
     "hoek": "^4.2.1",
     "restify": "^7.2.1"
@@ -11,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
