--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "base64url": "^3.0.0",
     "botbuilder": "^3.15.0",
-    "hoek": "^4.2.1",
+    "hoek": "^5.0.3",
     "restify": "^7.2.1"
   },
   "devDependencies": {},
